--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,31 @@
-body {
-  padding: 50px;
-  font: 20px "Lucida Grande", Helvetica, Arial, sans-serif;
+.container {
+  position: relative;
+  width: 450px;
+  margin: 0 auto;
+  font-size: 16px;
 }
 
 a {
   color: #00B7FF;
 }
+
+input {
+  width: 300px;
+  height: 30px;
+  margin: 20px 20px;
+}
+
+button {
+  width: 100px;
+  height: 30px;
+  display: inline-block;
+  border-radius: 20px;
+  position: absolute;
+  right: 36px;
+}
+
+button:hover {
+  background-color: #00B7FF;
+}
+
+
